--- a/.github/workflows/create-and-push-image.yml
+++ b/.github/workflows/create-and-push-image.yml
@@ -13,12 +13,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Extract version from pom.xml
-        id: extract_version
+      - name: Generate timestamp tag
+        id: generate_tag
         run: |
-          VERSION=$(./mvnw help:evaluate -Dexpression=project.version -q -DforceStdout)
-          echo "Versão extraída do pom.xml: $VERSION"
-          echo "tag=$VERSION" >> "$GITHUB_OUTPUT"
+          TIMESTAMP=$(date -u +"%Y%m%d%H%M%S")
+          echo "Generated timestamp tag: $TIMESTAMP"
+          echo "tag=$TIMESTAMP" >> "$GITHUB_OUTPUT"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -28,11 +28,11 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          TAG=${{ steps.extract_version.outputs.tag }}
+          TAG=${{ steps.generate_tag.outputs.tag }}
           echo "Building Docker image with tag: $TAG"
           docker build -t suntzu12/lua-load-balancer:$TAG -f docker/nginx/Dockerfile docker/nginx
 
       - name: Push Docker Image
         run: |
-          TAG=${{ steps.extract_version.outputs.tag }}
+          TAG=${{ steps.generate_tag.outputs.tag }}
           docker push suntzu12/lua-load-balancer:$TAG
