Balanceamento de carga com Round Robin

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 worker_processes 1;
 
 events {
-    worker_connections 1024;
+    worker_connections 5000;
 }
 
 http {
@@ -16,8 +16,11 @@ http {
         location /payments {
             content_by_lua_block {
                 local http = require "resty.http"
-
-                local target_url = "http://api1:8080/payments"
+                local lb_dict = ngx.shared.lb_counter
+                local counter, _ = lb_dict:incr("counter", 1, 0)
+                local backends = { "api01", "api02" }
+                local target_host = backends[(counter % #backends) + 1]
+                local target_url = string.format("http://%s:8080/payments", target_host)
 
                 ngx.req.read_body()
                 local body = ngx.req.get_body_data()
@@ -42,7 +45,7 @@ http {
         }
 
         location /payments-summary {
-            proxy_pass http://api2:8080;
+            proxy_pass http://api03:8080;
         }
     }
 }
